Added unfinished navbar and react icon

--- a/index.html
+++ b/index.html
@@ -7,5 +7,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="top-navbar">
+      <div><img src="react-icon.png" alt="React icon" /><span>React</span></div>
+      <nav>
+        <a href="#">Docs</a>
+        <a href="#">Tutorial</a>
+        <a href="#">Blog</a>
+        <a href="#">Community</a>
+      </nav>
+      <div></div>
+    </div>
+
+    
+
+    <header></header>
+
+    <div class="content"></div>
+
+    <footer></footer>
+  </body>
 </html>
